fix: mvn test